# TensorStudio

./: .gitattributes  .github\workflows\publish.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  benchmark_all.py  benchmarks\bench_autograd.py  benchmarks\bench_matmul.py  benchmarks\bench_tensor_ops.py  benchmarks\results.md  docs\Benchmarks\index.md  docs\Hardware\cpu-backend.md  docs\Neural Networks\training.md  docs\Roadmap\index.md  docs\Usage\serialization.md  docs\index.md  docs\nn.md  docs\quickstart.md  examples\basic_tensor_ops.py  examples\linear_regression.py  examples\save_load_model.py  examples\tiny_mlp.py  include\tensorstudio\ops.hpp  include\tensorstudio\serialization.hpp  include\tensorstudio\storage.hpp  include\tensorstudio\tensor.hpp  include\tensorstudio\version.hpp  mkdocs.yml  pyproject.toml  python\tensorstudio\_C.pyi  python\tensorstudio\__init__.py  python\tensorstudio\_version.py  python\tensorstudio\data\dataset.py  python\tensorstudio\errors.py  python\tensorstudio\grad_mode.py  (+16 more)
.github/workflows/: ci.yml  docs.yml  publish-testpypi.yml  publish.yml  wheels.yml
benchmarks/: __init__.py  bench_activations.py  bench_conv2d.py  bench_elementwise.py  bench_matmul.py  bench_pooling.py  bench_reductions.py  bench_tensor_ops.py  bench_training_loop.py  benchmark_report.py  results.md  results_conv2d.md  results_elementwise.md  results_matmul.md  results_pooling.md  results_reductions.md  results_tensor_ops.md  thresholds.json
docs/: api.md  autograd.md  data.md  development.md  index.md  linux.md  nn.md  optim.md  publishing.md  quickstart.md  serialization.md  tensors.md  windows.md
docs/Autograde/: index.md
docs/Benchmarks/: index.md
docs/Hardware/: cpu-backend.md  windows.md
docs/Neural Networks/: modules.md  training.md
docs/Projects/: index.md
docs/Roadmap/: index.md
docs/Usage/: api.md  data.md  interchange.md  serialization.md  tensors.md
docs/Vision/: index.md
docs/autograd/: coverage.md  gradient-notes.md  overview.md
docs/core/: api-reference.md  broadcasting.md  math-and-statistics.md  native-cpp-core.md  tensors.md
docs/data/: dataloader-patterns.md  dataset-creation.md  datasets-and-dataloaders.md  tensor-datasets.md
docs/development/: contributing.md  cpp-first.md
docs/ecosystem/: datasets.md  distributed-and-onnx-runtime.md  model-zoo-and-language.md  quantization-and-kernels.md  sparse.md
docs/getting-started/: installation.md  quickstart.md  source-build.md
docs/graph/: profiling-and-memory.md  serialization-and-optimization.md  tracing.md
docs/hardware/: backend-architecture.md  backend-benchmarks.md  cpu-backend.md  cuda.md  device-api.md  linux.md  macos.md  metal.md  windows.md
docs/interchange/: metadata.md  model-formats.md  numpy-interop.md  onnx-import.md  onnx.md  safetensors.md  serialization.md  trusted-serialization.md
docs/nn/: initializers.md  losses-and-summary.md  modules.md  optimizers.md  overview.md  training.md
docs/performance/: benchmarks.md  optimization.md  profiling.md
docs/project/: checkpoints.md  configs-and-templates.md  metrics.md  project-layout.md  trainer-and-callbacks.md  workflows.md
docs/release/: checklist.md  platform-compatibility.md  publishing.md  versioning.md
docs/roadmap/: milestones.md  priorities.md  roadmap.md
docs/vision/: dataset-creation.md  detection.md  models-and-visualization.md  overview.md  segmentation.md  transforms.md
examples/: ecosystem_features.py  export_onnx.py  graph_runtime.py  image_folder_classification.py  project_training.py  vision_classifier.py
include/tensorstudio/: autograd.hpp  device.hpp  dtype.hpp  errors.hpp  kernel_abi.hpp  module.hpp  ops.hpp  optim.hpp  perf.hpp  random.hpp  shape.hpp  storage.hpp  tensor.hpp  version.hpp
python/tensorstudio/: _C.pyi  __init__.py  _version.py  autograd.py  distributed.py  dtypes.py  hardware.py  kernels.py  math.py  model_zoo.py  ops.py  performance.py  quantization.py  serialization.py  sparse.py  tensor.py
python/tensorstudio/data/: __init__.py  dataloader.py  dataset.py  factories.py  manifest.py  public_formats.py  splitting.py
python/tensorstudio/graph/: __init__.py  core.py
python/tensorstudio/interchange/: __init__.py  model_formats.py  onnx.py
python/tensorstudio/metrics/: __init__.py  classification.py  multilabel.py  regression.py
python/tensorstudio/nn/: __init__.py  attention.py  functional.py  init.py  language.py  losses.py  modules.py  summary.py
python/tensorstudio/optim/: __init__.py  adam.py  adamw.py  sgd.py  utils.py
python/tensorstudio/project/: __init__.py  callbacks.py  checkpoint.py  config.py  seed.py  templates.py  trainer.py
python/tensorstudio/vision/: __init__.py  datasets.py  detection.py  io.py  metrics.py  models.py  segmentation.py  transforms.py  visualization.py
src/bindings/: bind_autograd.cpp  bind_nn.cpp  bind_ops.cpp  bind_optim.cpp  bind_tensor.cpp  bindings.cpp  bindings.hpp
src/core/: autograd.cpp  device.cpp  dtype.cpp  module.cpp  ops.cpp  perf.cpp  random.cpp  serialization.cpp  shape.cpp  storage.cpp  tensor.cpp
tests/: conftest.py  test_autograd.py  test_autograd_hardening.py  test_benchmark_report.py  test_broadcasting.py  test_core_math_expansion.py  test_data.py  test_ecosystem.py  test_errors.py  test_graph.py  test_hardware.py  test_import.py  test_indexing.py  test_interchange.py  test_kernels.py  test_model_formats.py  test_nn.py  test_nn_building_blocks.py  test_numpy_interop.py  test_ops.py  test_optim.py  test_performance.py  test_project.py  test_serialization.py  test_tensor.py  test_training_workflows.py  test_v2_foundation.py  test_views.py  test_vision.py  test_vision_depth.py
tools/: verify_artifacts.py
